// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageSliderWidget /> should map the correct image settings to the components 1`] = `
<ImageSliderWidget
  className=""
  settings={
    Object {
      "autostart": false,
      "delay": 7000,
      "images": Array [
        Object {
          "image": "http://placehold.it/350x150",
          "link": "http://example.com",
        },
        Object {
          "image": "http://placehold.it/10x10",
          "link": "http://other.example.com",
        },
      ],
      "loop": false,
      "pagination": true,
    }
  }
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={Object {}}
    controls={false}
    disabled={false}
    indicators={true}
    initialSlide={0}
    interval={7000}
    loop={false}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <Slider
      autoPlay={false}
      className=""
      classNames={
        Object {
          "activeIndicator": "css-so6ht",
          "container": "css-nil",
          "inactiveIndicator": "css-1hipsfp",
          "indicator": "css-17uszht",
          "slide": "css-nil",
          "slider": "css-1i764wo",
        }
      }
      controls={false}
      disabled={false}
      indicators={true}
      initialSlide={0}
      interval={7000}
      loop={false}
      onSlideChange={null}
      slidesPerView={1}
      snapItems={true}
    >
      <div
        className="css-1hlki0z "
      >
        <ReactIdSwiper
          autoplay={null}
          bulletActiveClass="css-so6ht"
          bulletClass="css-1hipsfp"
          containerClass="sg-swiper-container css-rdsogp css-nil"
          freeMode={false}
          initialSlide={0}
          loop={false}
          nextButton={null}
          onInit={[Function]}
          onSlideChangeEnd={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
          onTransitionStart={[Function]}
          pagination=".css-17uszht"
          paginationModifierClass="sg-swiper-pagination-"
          prevButton={null}
          slideClass="sg-swiper-slide"
          slidesPerView={1}
          wrapperClass="swiper-wrapper"
        >
          <div
            className="sg-swiper-container css-rdsogp css-nil"
          >
            <div
              className="swiper-wrapper"
            >
              <div
                className="sg-swiper-slide css-1l9a57c "
                key=".$s0"
              >
                <SliderItem
                  key="0"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <Link
                      className="css-63oe3q"
                      href="http://example.com"
                      key="si0"
                    >
                      <div
                        className="css-c6ki83 css-63oe3q"
                        onClick={[Function]}
                        role="link"
                      >
                        <Image
                          alt={null}
                          animating={true}
                          backgroundColor="#f2f2f2"
                          className=""
                          forcePlaceholder={false}
                          highestResolutionLoaded={[Function]}
                          key="si0"
                          onError={null}
                          onLoad={null}
                          ratio={null}
                          resolutions={
                            Array [
                              Object {
                                "height": 440,
                                "width": 440,
                              },
                            ]
                          }
                          src="http://placehold.it/350x150"
                          transition={null}
                        >
                          <div
                            className="css-326p2s "
                          />
                        </Image>
                      </div>
                    </Link>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                key=".$s1"
              >
                <SliderItem
                  key="1"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <Link
                      className="css-63oe3q"
                      href="http://other.example.com"
                      key="si1"
                    >
                      <div
                        className="css-c6ki83 css-63oe3q"
                        onClick={[Function]}
                        role="link"
                      >
                        <Image
                          alt={null}
                          animating={true}
                          backgroundColor="#f2f2f2"
                          className=""
                          forcePlaceholder={false}
                          highestResolutionLoaded={[Function]}
                          key="si1"
                          onError={null}
                          onLoad={null}
                          ratio={null}
                          resolutions={
                            Array [
                              Object {
                                "height": 440,
                                "width": 440,
                              },
                            ]
                          }
                          src="http://placehold.it/10x10"
                          transition={null}
                        >
                          <div
                            className="css-326p2s "
                          />
                        </Image>
                      </div>
                    </Link>
                  </div>
                </SliderItem>
              </div>
            </div>
            <div
              className="css-17uszht "
            />
          </div>
        </ReactIdSwiper>
      </div>
    </Slider>
  </ImageSlider>
</ImageSliderWidget>
`;

exports[`<ImageSliderWidget /> should render no slider with just a single image 1`] = `
<ImageSliderWidget
  className=""
  settings={
    Object {
      "autostart": false,
      "delay": 7000,
      "images": Array [
        Object {
          "image": "http://placehold.it/350x150",
          "link": "http://example.com",
        },
      ],
      "loop": false,
      "pagination": true,
    }
  }
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={Object {}}
    controls={false}
    disabled={false}
    indicators={true}
    initialSlide={0}
    interval={7000}
    loop={false}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <Link
      className="css-63oe3q"
      href="http://example.com"
      key=".$si0"
    >
      <div
        className="css-c6ki83 css-63oe3q"
        onClick={[Function]}
        role="link"
      >
        <Image
          alt={null}
          animating={true}
          backgroundColor="#f2f2f2"
          className=""
          forcePlaceholder={false}
          highestResolutionLoaded={[Function]}
          key="si0"
          onError={null}
          onLoad={null}
          ratio={null}
          resolutions={
            Array [
              Object {
                "height": 440,
                "width": 440,
              },
            ]
          }
          src="http://placehold.it/350x150"
          transition={null}
        >
          <div
            className="css-326p2s "
          />
        </Image>
      </div>
    </Link>
  </ImageSlider>
</ImageSliderWidget>
`;

exports[`<ImageSliderWidget /> should render the images unlinked if no link is set 1`] = `
<ImageSliderWidget
  className=""
  settings={
    Object {
      "autostart": false,
      "delay": 7000,
      "images": Array [
        Object {
          "image": "http://placehold.it/350x150",
          "link": null,
        },
      ],
      "loop": false,
      "pagination": true,
    }
  }
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={Object {}}
    controls={false}
    disabled={false}
    indicators={true}
    initialSlide={0}
    interval={7000}
    loop={false}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <Image
      alt={null}
      animating={true}
      backgroundColor="#f2f2f2"
      className=""
      forcePlaceholder={false}
      highestResolutionLoaded={[Function]}
      key=".$si0"
      onError={null}
      onLoad={null}
      ratio={null}
      resolutions={
        Array [
          Object {
            "height": 440,
            "width": 440,
          },
        ]
      }
      src="http://placehold.it/350x150"
      transition={null}
    >
      <div
        className="css-326p2s "
      />
    </Image>
  </ImageSlider>
</ImageSliderWidget>
`;

exports[`<ImageSliderWidget /> should render the images with links 1`] = `
<ImageSliderWidget
  className=""
  settings={
    Object {
      "autostart": false,
      "delay": 7000,
      "images": Array [
        Object {
          "image": "http://placehold.it/350x150",
          "link": "http://example.com",
        },
        Object {
          "image": "http://placehold.it/350x150",
          "link": null,
        },
        Object {
          "image": "http://placehold.it/350x150",
          "link": "http://example.com",
        },
        Object {
          "image": "http://placehold.it/350x150",
          "link": "http://example.com",
        },
      ],
      "loop": false,
      "pagination": true,
    }
  }
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={Object {}}
    controls={false}
    disabled={false}
    indicators={true}
    initialSlide={0}
    interval={7000}
    loop={false}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <Slider
      autoPlay={false}
      className=""
      classNames={
        Object {
          "activeIndicator": "css-so6ht",
          "container": "css-nil",
          "inactiveIndicator": "css-1hipsfp",
          "indicator": "css-17uszht",
          "slide": "css-nil",
          "slider": "css-1i764wo",
        }
      }
      controls={false}
      disabled={false}
      indicators={true}
      initialSlide={0}
      interval={7000}
      loop={false}
      onSlideChange={null}
      slidesPerView={1}
      snapItems={true}
    >
      <div
        className="css-1hlki0z "
      >
        <ReactIdSwiper
          autoplay={null}
          bulletActiveClass="css-so6ht"
          bulletClass="css-1hipsfp"
          containerClass="sg-swiper-container css-rdsogp css-nil"
          freeMode={false}
          initialSlide={0}
          loop={false}
          nextButton={null}
          onInit={[Function]}
          onSlideChangeEnd={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
          onTransitionStart={[Function]}
          pagination=".css-17uszht"
          paginationModifierClass="sg-swiper-pagination-"
          prevButton={null}
          slideClass="sg-swiper-slide"
          slidesPerView={1}
          wrapperClass="swiper-wrapper"
        >
          <div
            className="sg-swiper-container css-rdsogp css-nil"
          >
            <div
              className="swiper-wrapper"
            >
              <div
                className="sg-swiper-slide css-1l9a57c "
                key=".$s0"
              >
                <SliderItem
                  key="0"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <Link
                      className="css-63oe3q"
                      href="http://example.com"
                      key="si0"
                    >
                      <div
                        className="css-c6ki83 css-63oe3q"
                        onClick={[Function]}
                        role="link"
                      >
                        <Image
                          alt={null}
                          animating={true}
                          backgroundColor="#f2f2f2"
                          className=""
                          forcePlaceholder={false}
                          highestResolutionLoaded={[Function]}
                          key="si0"
                          onError={null}
                          onLoad={null}
                          ratio={null}
                          resolutions={
                            Array [
                              Object {
                                "height": 440,
                                "width": 440,
                              },
                            ]
                          }
                          src="http://placehold.it/350x150"
                          transition={null}
                        >
                          <div
                            className="css-326p2s "
                          />
                        </Image>
                      </div>
                    </Link>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                key=".$s1"
              >
                <SliderItem
                  key="1"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <Image
                      alt={null}
                      animating={true}
                      backgroundColor="#f2f2f2"
                      className=""
                      forcePlaceholder={false}
                      highestResolutionLoaded={[Function]}
                      key="si1"
                      onError={null}
                      onLoad={null}
                      ratio={null}
                      resolutions={
                        Array [
                          Object {
                            "height": 440,
                            "width": 440,
                          },
                        ]
                      }
                      src="http://placehold.it/350x150"
                      transition={null}
                    >
                      <div
                        className="css-326p2s "
                      />
                    </Image>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                key=".$s2"
              >
                <SliderItem
                  key="2"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <Link
                      className="css-63oe3q"
                      href="http://example.com"
                      key="si2"
                    >
                      <div
                        className="css-c6ki83 css-63oe3q"
                        onClick={[Function]}
                        role="link"
                      >
                        <Image
                          alt={null}
                          animating={true}
                          backgroundColor="#f2f2f2"
                          className=""
                          forcePlaceholder={false}
                          highestResolutionLoaded={[Function]}
                          key="si2"
                          onError={null}
                          onLoad={null}
                          ratio={null}
                          resolutions={
                            Array [
                              Object {
                                "height": 440,
                                "width": 440,
                              },
                            ]
                          }
                          src="http://placehold.it/350x150"
                          transition={null}
                        >
                          <div
                            className="css-326p2s "
                          />
                        </Image>
                      </div>
                    </Link>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                key=".$s3"
              >
                <SliderItem
                  key="3"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <Link
                      className="css-63oe3q"
                      href="http://example.com"
                      key="si3"
                    >
                      <div
                        className="css-c6ki83 css-63oe3q"
                        onClick={[Function]}
                        role="link"
                      >
                        <Image
                          alt={null}
                          animating={true}
                          backgroundColor="#f2f2f2"
                          className=""
                          forcePlaceholder={false}
                          highestResolutionLoaded={[Function]}
                          key="si3"
                          onError={null}
                          onLoad={null}
                          ratio={null}
                          resolutions={
                            Array [
                              Object {
                                "height": 440,
                                "width": 440,
                              },
                            ]
                          }
                          src="http://placehold.it/350x150"
                          transition={null}
                        >
                          <div
                            className="css-326p2s "
                          />
                        </Image>
                      </div>
                    </Link>
                  </div>
                </SliderItem>
              </div>
            </div>
            <div
              className="css-17uszht "
            />
          </div>
        </ReactIdSwiper>
      </div>
    </Slider>
  </ImageSlider>
</ImageSliderWidget>
`;

exports[`<ImageSliderWidget /> should render the slider with the correct number of images 1`] = `
<ImageSliderWidget
  className=""
  settings={
    Object {
      "autostart": false,
      "delay": 7000,
      "images": Array [
        Object {
          "image": "http://placehold.it/350x150",
          "link": "http://example.com",
        },
        Object {
          "image": "http://placehold.it/350x150",
          "link": "http://example.com",
        },
        Object {
          "image": "http://placehold.it/350x150",
          "link": "http://example.com",
        },
      ],
      "loop": false,
      "pagination": true,
    }
  }
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={Object {}}
    controls={false}
    disabled={false}
    indicators={true}
    initialSlide={0}
    interval={7000}
    loop={false}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <Slider
      autoPlay={false}
      className=""
      classNames={
        Object {
          "activeIndicator": "css-so6ht",
          "container": "css-nil",
          "inactiveIndicator": "css-1hipsfp",
          "indicator": "css-17uszht",
          "slide": "css-nil",
          "slider": "css-1i764wo",
        }
      }
      controls={false}
      disabled={false}
      indicators={true}
      initialSlide={0}
      interval={7000}
      loop={false}
      onSlideChange={null}
      slidesPerView={1}
      snapItems={true}
    >
      <div
        className="css-1hlki0z "
      >
        <ReactIdSwiper
          autoplay={null}
          bulletActiveClass="css-so6ht"
          bulletClass="css-1hipsfp"
          containerClass="sg-swiper-container css-rdsogp css-nil"
          freeMode={false}
          initialSlide={0}
          loop={false}
          nextButton={null}
          onInit={[Function]}
          onSlideChangeEnd={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
          onTransitionStart={[Function]}
          pagination=".css-17uszht"
          paginationModifierClass="sg-swiper-pagination-"
          prevButton={null}
          slideClass="sg-swiper-slide"
          slidesPerView={1}
          wrapperClass="swiper-wrapper"
        >
          <div
            className="sg-swiper-container css-rdsogp css-nil"
          >
            <div
              className="swiper-wrapper"
            >
              <div
                className="sg-swiper-slide css-1l9a57c "
                key=".$s0"
              >
                <SliderItem
                  key="0"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <Link
                      className="css-63oe3q"
                      href="http://example.com"
                      key="si0"
                    >
                      <div
                        className="css-c6ki83 css-63oe3q"
                        onClick={[Function]}
                        role="link"
                      >
                        <Image
                          alt={null}
                          animating={true}
                          backgroundColor="#f2f2f2"
                          className=""
                          forcePlaceholder={false}
                          highestResolutionLoaded={[Function]}
                          key="si0"
                          onError={null}
                          onLoad={null}
                          ratio={null}
                          resolutions={
                            Array [
                              Object {
                                "height": 440,
                                "width": 440,
                              },
                            ]
                          }
                          src="http://placehold.it/350x150"
                          transition={null}
                        >
                          <div
                            className="css-326p2s "
                          />
                        </Image>
                      </div>
                    </Link>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                key=".$s1"
              >
                <SliderItem
                  key="1"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <Link
                      className="css-63oe3q"
                      href="http://example.com"
                      key="si1"
                    >
                      <div
                        className="css-c6ki83 css-63oe3q"
                        onClick={[Function]}
                        role="link"
                      >
                        <Image
                          alt={null}
                          animating={true}
                          backgroundColor="#f2f2f2"
                          className=""
                          forcePlaceholder={false}
                          highestResolutionLoaded={[Function]}
                          key="si1"
                          onError={null}
                          onLoad={null}
                          ratio={null}
                          resolutions={
                            Array [
                              Object {
                                "height": 440,
                                "width": 440,
                              },
                            ]
                          }
                          src="http://placehold.it/350x150"
                          transition={null}
                        >
                          <div
                            className="css-326p2s "
                          />
                        </Image>
                      </div>
                    </Link>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                key=".$s2"
              >
                <SliderItem
                  key="2"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <Link
                      className="css-63oe3q"
                      href="http://example.com"
                      key="si2"
                    >
                      <div
                        className="css-c6ki83 css-63oe3q"
                        onClick={[Function]}
                        role="link"
                      >
                        <Image
                          alt={null}
                          animating={true}
                          backgroundColor="#f2f2f2"
                          className=""
                          forcePlaceholder={false}
                          highestResolutionLoaded={[Function]}
                          key="si2"
                          onError={null}
                          onLoad={null}
                          ratio={null}
                          resolutions={
                            Array [
                              Object {
                                "blur": 2,
                                "height": 50,
                                "width": 50,
                              },
                              Object {
                                "height": 440,
                                "width": 440,
                              },
                            ]
                          }
                          src="http://placehold.it/350x150"
                          transition={null}
                        >
                          <div
                            className="css-326p2s "
                          />
                        </Image>
                      </div>
                    </Link>
                  </div>
                </SliderItem>
              </div>
            </div>
            <div
              className="css-17uszht "
            />
          </div>
        </ReactIdSwiper>
      </div>
    </Slider>
  </ImageSlider>
</ImageSliderWidget>
`;
